--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,10 +33,9 @@
                 android:textAlignment="textEnd" />
 
             <TextView
-                android:text="33524.28"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView2"
+                android:id="@+id/cashflow"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:textAlignment="textEnd" />
         </LinearLayout>
