--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,7 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay"
-        android:background="@color/cashflowBG">
+        android:background="@color/cashflowBG"
+        android:onClick="onClick">
 
         <LinearLayout
             android:orientation="vertical"
@@ -41,6 +43,7 @@
         </LinearLayout>
 
     </android.support.design.widget.AppBarLayout>
+    <include layout="@layout/content_main" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -48,10 +51,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        android:onClick="onClick"
         app:backgroundTint="@color/cashflowBG"
         app:elevation="4dp"
         app:srcCompat="@android:drawable/ic_input_add" />
 
-    <include layout="@layout/content_main" />
 
 </android.support.design.widget.CoordinatorLayout>
